fixed gap

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -11582,15 +11582,18 @@ span.popular-card__figure {
   top: 0;
   height: 100%;
   width: 100%;
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 .timber-item__image img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
   object-fit: contain;
+}
+@media (max-width: 768px) {
+  .timber-item__image img {
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
 }
 .timber-item__image:nth-child(2) {
   visibility: hidden;
