--- a/src/scss/components/_timber-main.scss
+++ b/src/scss/components/_timber-main.scss
@@ -143,15 +143,16 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
 
 
     img {
       width: 100%;
       height: 100%;
       object-fit: contain;
+
+      @include mobile {
+        object-fit: cover;
+      }
     }
 
     &:nth-child(1) {}
